--- a/app.json
+++ b/app.json
@@ -57,16 +57,20 @@
         "pages/goodLesson/goodLessonPeople/goodLessonPeople",
         "pages/videos/videoSharePage/videoSharePage",
         "pages/videoVote/videoVoteUserList/videoVoteUserList",
+        "pages/videoVote/videoVoteStuList/videoVoteStuList",
+        "pages/videoVote/videoVoteInfo/videoVoteInfo",
+        "pages/videoVote/videoVoteUserInfo/videoVoteUserInfo",
+        "pages/videoVote/videoVoteSignup/videoVoteSignup",
         "pages/videoClass/videoClassManList/videoClassManList",
         "pages/videoClass/videoClassInfo/videoClassInfo",
         "pages/videoClass/videoClassUserList/videoClassUserList",
-        "pages/videoClass/videoClassEdit/videoClassEdit"
-
+        "pages/videoClass/videoClassEdit/videoClassEdit",
+        "pages/videoClass/videoClassStuList/videoClassStuList"
     ],
     "window": {
         "backgroundTextStyle": "dark",
         "navigationBarBackgroundColor": "#fff",
-        "navigationBarTitleText": "WeChat",
+        "navigationBarTitleText": "weChat",
         "navigationBarTextStyle": "black",
         "enablePullDownRefresh": true
     },
