--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "wx6c316aa5575b1519",
+	"appid": "wx5464437580674446",
 	"projectname": "newise",
 	"isGameTourist": false,
 	"condition": {
